--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@types/cypress": "^1.1.3",
     "@types/jest": "^29.5.12",
+    "cypress": "^13.14.1",
+    "cypress-plugin-snapshots": "^1.4.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5"
